[package]
name = "ru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = "0.4.26"
chrono-tz = "0.8.3"
jni = "0.21.1"
# 用于表格展示 比如采集cpu等
tabled = "0.12.2"
# perf 性能工具
perf_monitor = "0.2.0"